# uv-packages-workspace-demo

./: .in  .out  Makefile  main.py  pyproject.toml
package_a/: pyproject.toml
package_a/src/package_a/: __init__.py
package_b/: pyproject.toml
package_b/src/package_b/: __init__.py
