[project]
name = "package-a"
version = "0.1.0"
description = "Package A Stuff"
readme = "README.md"
authors = [
    { name = "Steven Hollingsworth", email = "749515+shollingsworth@users.noreply.github.com" }
]
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "ruff >= 0.8.1",
    "pytest >= 8.3.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/package_a"]

[project.scripts]
package-a-cli = "package_a:hello"

[tool.uv]
package = true
include = ["src/package_a/py.typed"]
