[project]
name = "package-b"
version = "0.1.0"
description = "Package B Stuff"
readme = "README.md"
authors = [
    { name = "Steven Hollingsworth", email = "749515+shollingsworth@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "package-a",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/package_b"]

[project.scripts]
package-b-cli = "package_b:hello"

[tool.uv]
package = true
include = ["src/package_b/py.typed"]
